--- a/spaceship-titanic/notebooks/spaceship-titanic_v3.ipynb
+++ b/spaceship-titanic/notebooks/spaceship-titanic_v3.ipynb
@@ -1551,7 +1551,7 @@
    "id": "e6c782ad-39e0-4e35-9a05-07de76891820",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Gradient Boosting "
    ]
   },
   {
